# wasm-to-uwasm

./: .gitlab-ci.yml  CMakeLists.txt  ISA.md  README.md  basics.cxx  basics.h  build.sh  convertor.cpp  convertor.h  executor.cxx  executor.h  libubh.h  op_enum.h  reader.cpp  reader.h  test.cpp  test.sh  ubh.cpp  ubh.h  uwasm_bin.h  uwinst.cpp  uwinst.h  uwinst_opcode.h  wasm_config.h  winst.cpp  winst.h  winst_opcode.h
src/: binary-reader.cc  ir.h  wasm-cvt.cc
tests/simple/: demo_ctrl03.wasm  demo_ctrl03.wat
